# basic-pitch-torch

./: pyproject.toml
basic_pitch_torch/: __init__.py  inference.py
