[project]
name = "basic-pitch-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.2.post1",
    "mir-eval>=0.8.2",
    "nnaudio>=0.3.3",
    "pretty-midi>=0.2.10",
    "scipy>=1.15.2",
]

[tool.setuptools.packages.find]
include = ['basic_pitch_torch', 'basic_pitch_torch.*']
